--- a/src/css/diary.css
+++ b/src/css/diary.css
@@ -1,22 +1,4 @@
-:root {
-  --textFont: Georgia, Cambria, 'Times New Roman', Times, serif;
-  --headFont: 'Trebuchet MS', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  --textColor: #333;
-  --brightColor: #5C5C5C;
-  --blockBorder: 0.3rem solid var(--brightColor);
-  --blockBackground: #F9F9F9;
-  --lightBorder: 0.1rem solid #E0E0E0;
-  --monoFont: Menlo, Monaco, Consolas, "lucida console", "Courier New", monospace;
-}
-
-html {
-  font-size: 18px;
-}
-
-body {
-  font-family: var(--textFont);
-  color: var(--textColor);
-}
+@import "variables.css";
 
 .index {
   position: fixed;
